// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: fix 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="fix"
    tabs={
      Array [
        Object {
          "content": "",
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="padded hidden"
    >
      <div>
        CodeTabContent
      </div>
    </div>
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about fixing !</p>",
        }
      }
      key="risk"
    />
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about fixing !</p>",
        }
      }
      key="vulnerability"
    />
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about fixing !</p>",
        }
      }
      key="fix"
    />
  </div>
</Fragment>
`;

exports[`should render correctly: risk 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="code"
    tabs={
      Array [
        Object {
          "content": "",
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="padded"
    >
      <div>
        CodeTabContent
      </div>
    </div>
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      key="risk"
    />
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      key="vulnerability"
    />
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      key="fix"
    />
  </div>
</Fragment>
`;

exports[`should render correctly: vulnerability 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="vulnerability"
    tabs={
      Array [
        Object {
          "content": "",
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="padded hidden"
    >
      <div>
        CodeTabContent
      </div>
    </div>
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
        }
      }
      key="risk"
    />
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
        }
      }
      key="vulnerability"
    />
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
        }
      }
      key="fix"
    />
  </div>
</Fragment>
`;

exports[`should render correctly: with comments or changelog element 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="code"
    tabs={
      Array [
        Object {
          "content": "",
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="padded"
    >
      <div>
        CodeTabContent
      </div>
    </div>
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      key="risk"
    />
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      key="vulnerability"
    />
    <div
      className="markdown big-padded hidden"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      key="fix"
    />
  </div>
</Fragment>
`;
